# texts-same-article

./: pyproject.toml  texts-same-article.ipynb
.ipynb_checkpoints/: texts-same-article-checkpoint.ipynb
