[tool.poetry]
name = "texts-same-article"
version = "0.1.0"
description = ""
authors = ["felipesveiga <felipesveiga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.5.1"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
pyboxen = "^1.3.0"
statsmodels = "^0.14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false
